--- a/core-sample/src/main/res/layout/fragment_hunt_details.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:gravity="center"
-                android:textColor="@color/white"
+                android:textColor="@color/navy"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:text="Hunt Name" />
@@ -49,7 +49,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_margin="8dp"
                 android:layout_toEndOf="@id/huntImage"
-                android:textColor="@color/lightGrey"
+                android:textColor="@color/grey"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 tools:text="Hunt Id" />
@@ -63,7 +63,7 @@
                 android:layout_toEndOf="@id/huntImage"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textColor="@color/lightGrey"
+                android:textColor="@color/grey"
                 android:textSize="14sp"
                 tools:text="Hunt Description" />
         </RelativeLayout>
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="14sp"
             tools:text="Hunt Data" />
 
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/hunt_markers"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/hunt_rewards"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
             android:textStyle="bold" />
