--- a/core-sample/src/main/res/layout/fragment_hunt_markers.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_markers.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".ui.fragments.arhunts.HuntMarkersFragment">
@@ -21,7 +21,7 @@
             android:layout_margin="16dp"
             android:gravity="center"
             android:text="@string/clue_card"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="8dp"
             android:layout_toEndOf="@id/clueCardImage"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="13sp"
             android:textStyle="bold"
             tools:text="clue card Id" />
@@ -57,7 +57,7 @@
             android:layout_toEndOf="@id/clueCardImage"
             android:ellipsize="end"
             android:maxLines="3"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="14sp"
             tools:text="Clue card Description" />
     </RelativeLayout>
@@ -70,7 +70,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/huntmarker_data"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -84,7 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:textColor="@color/lightGrey">
+            android:textColor="@color/grey">
         </TextView>
     </ScrollView>
 
