--- a/core-sample/src/main/res/layout/hunt_item.xml
+++ b/core-sample/src/main/res/layout/hunt_item.xml
@@ -22,7 +22,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
+        android:maxLines="1"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/lightGrey"
+        android:textColor="@color/grey"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="@+id/hunt_thumbnail"
         app:layout_constraintEnd_toEndOf="parent"
