--- a/core-sample/src/main/res/layout/hunt_marker_item.xml
+++ b/core-sample/src/main/res/layout/hunt_marker_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         app:layout_constraintBottom_toTopOf="@+id/huntMarker_huntId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/clue_image"
@@ -38,7 +38,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:textColor="@color/lightGrey"
+        android:textColor="@color/grey"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="@+id/clue_image"
         app:layout_constraintEnd_toEndOf="parent"
