--- a/core-sample/src/main/res/drawable/edit_text_border.xml
+++ b/core-sample/src/main/res/drawable/edit_text_border.xml
@@ -11,6 +11,6 @@
         android:topLeftRadius="5dp"
         android:topRightRadius="5dp"/>
     <stroke
-        android:color="#004781"
+        android:color="#212BFF"
         android:width="2dp"/>
 </shape>
