--- a/core-sample/src/main/res/layout/fragment_hunt_rewards.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_rewards.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".ui.fragments.arhunts.HuntRewardDetailsFragment">
@@ -21,7 +21,7 @@
             android:layout_margin="16dp"
             android:gravity="center"
             android:text="@string/reward"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="8dp"
             android:layout_toEndOf="@id/rewardImage"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="13sp"
             android:textStyle="bold"
             tools:text="Reward Name" />
@@ -56,7 +56,7 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="8dp"
             android:layout_toEndOf="@id/rewardImage"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="13sp"
             android:textStyle="bold"
             tools:text="Reward Name" />
@@ -70,7 +70,7 @@
             android:layout_toEndOf="@id/rewardImage"
             android:ellipsize="end"
             android:maxLines="3"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="13sp"
             tools:text="Reward Id" />
     </RelativeLayout>
@@ -83,7 +83,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/huntreward_data"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:textColor="@color/lightGrey">
+            android:textColor="@color/grey">
         </TextView>
     </ScrollView>
 
