--- a/core-sample/src/main/res/layout/fragment_marker_details.xml
+++ b/core-sample/src/main/res/layout/fragment_marker_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.fragments.markers.MarkerDetailsFragment">
 
@@ -20,7 +20,7 @@
             android:layout_margin="16dp"
             android:gravity="center"
             android:text="@string/marker_name"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -42,7 +42,7 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="8dp"
             android:layout_toEndOf="@id/markerImage"
-            android:textColor="@color/lightGrey"
+            android:textColor="@color/grey"
             android:textSize="13sp"
             android:textStyle="bold"
             tools:text="Marker Id" />
@@ -58,7 +58,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/marker_data"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -70,7 +70,8 @@
             android:id="@+id/marker_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white" />
+            android:layout_margin="16dp"
+            android:textColor="@color/grey" />
 
     </ScrollView>
 
