--- a/core-sample/src/main/res/layout/main_fragment.xml
+++ b/core-sample/src/main/res/layout/main_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     tools:context=".ui.fragments.main.MainFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -18,21 +18,20 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="35dp"
+            android:layout_width="200dp"
+            android:layout_height="46dp"
             android:layout_margin="16dp"
             android:contentDescription="@string/app_logo"
-            android:background="@color/white"
             android:src="@drawable/logo">
         </ImageView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="22dp"
             android:layout_marginBottom="32dp"
             android:text="@string/iar_core_sdk"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="20sp">
         </TextView>
 
