--- a/core-sample/src/main/res/layout/marker_item.xml
+++ b/core-sample/src/main/res/layout/marker_item.xml
@@ -24,7 +24,7 @@
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:lineSpacingExtra="8dp"
-        android:textColor="@color/lightGrey"
+        android:textColor="@color/grey"
         android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/marker_image"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="@string/nearby"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textStyle="bold">
         </TextView>
 
