--- a/core-sample/src/main/res/layout/on_demand_markers_fragment.xml
+++ b/core-sample/src/main/res/layout/on_demand_markers_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.fragments.markers.OnDemandMarkersFragment">
 
