--- a/core-sample/src/main/res/layout/reward_details_fragment.xml
+++ b/core-sample/src/main/res/layout/reward_details_fragment.xml
@@ -2,7 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <LinearLayout
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         android:textSize="28sp"
         android:textStyle="bold" />
 
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="8dp"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="16sp" />
 
     </LinearLayout>
@@ -76,8 +76,8 @@
         android:id="@+id/reward_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:layout_margin="16dp"
+        android:textColor="@color/navy"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -86,7 +86,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/navy"
         android:textSize="14sp" />
 
     <TextView
@@ -94,7 +95,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/navy"
         android:textSize="14sp" />
 
     <TextView
@@ -102,7 +104,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/navy"
         android:textSize="14sp" />
 </LinearLayout>
 
