--- a/core-sample/src/main/res/layout/user_management_fragment.xml
+++ b/core-sample/src/main/res/layout/user_management_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background = "@color/sampleApp_darkBlue"
+    android:background = "@color/white"
     tools:context=".ui.fragments.usermanagement.UserManagementFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +24,7 @@
             android:layout_marginEnd="16dp"
             android:text="Account Settings"
             android:textSize="20sp"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="External UserID:"
-            android:textColor="@color/white"
+            android:textColor="@color/navy"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />
@@ -50,7 +50,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:textIsSelectable="true"
-            android:background="@drawable/round_rect_small"
+            android:background="@drawable/edit_text_border"
             android:textSize="14sp"
             android:padding="10dp"
             android:textColor="@color/grey"
