--- a/core-sample/src/main/res/layout/user_rewards_fragment.xml
+++ b/core-sample/src/main/res/layout/user_rewards_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.fragments.rewards.UserRewardsFragment">
 
@@ -20,7 +20,7 @@
         android:id="@+id/instruction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         android:layout_margin="16dp"
         android:gravity="center"
         android:textSize = "16sp"
@@ -35,5 +35,11 @@
         android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/lightGrey">
+    </View>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
