--- a/surface-ar-sample/src/main/res/layout/fragment_on_demand_markers.xml
+++ b/surface-ar-sample/src/main/res/layout/fragment_on_demand_markers.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/sampleApp_darkBlue"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.fragments.ondemand.OnDemandMarkersFragment">
 
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:indeterminateTint="@color/white"
+            android:indeterminateTint="@color/primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/progressView"
             android:text="@string/text_label_download_asset"
-            android:textColor="@color/white"/>
+            android:textColor="@color/navy"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
