--- a/surface-ar-sample/src/main/res/layout/marker_item.xml
+++ b/surface-ar-sample/src/main/res/layout/marker_item.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/navy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/marker_image"
         app:layout_constraintTop_toTopOf="@+id/marker_image" />
@@ -36,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textColor="@color/lightGrey"
+        android:textColor="@color/grey"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="@+id/marker_image"
         app:layout_constraintEnd_toEndOf="parent"
