--- a/surface-ar-sample/src/main/res/values/colors.xml
+++ b/surface-ar-sample/src/main/res/values/colors.xml
@@ -26,4 +26,7 @@
 
     <color name="darkGrey">#404040</color>
     <color name="lightGrey">#B0B0B0</color>
+    <color name="navy">#001158</color>
+
+
 </resources>
