--- a/surface-ar-sample/src/main/res/layout/location_markers_fragment.xml
+++ b/surface-ar-sample/src/main/res/layout/location_markers_fragment.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:background="@drawable/round_long_button"
-            android:text="Get Location Markers"
+            android:textAllCaps="false"
+            android:text="@string/get_location_markers"
             android:textSize="13sp" />
 
         <TextView
