--- a/common/src/main/res/layout/user_fragment.xml
+++ b/common/src/main/res/layout/user_fragment.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
-    tools:context=".ui.fragments.usermanagement.UserManagementFragment">
+    android:background = "@color/sampleApp_darkBlue"
+    tools:context=".user.UserFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_gravity="center"
         tools:context=".ui.fragments.usermanagement.UserManagementFragment">
 
@@ -20,10 +22,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/account_settings"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/white"
+            android:text="Account Settings"
             android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="@string/external_userid"
+            android:text="External UserID:"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,39 +49,41 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:textIsSelectable="true"
             android:background="@drawable/round_rect_small"
+            android:textSize="14sp"
             android:padding="10dp"
             android:textColor="@color/grey"
-            android:textIsSelectable="true"
-            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/settingsMessage" />
 
 
+
         <Button
             android:id="@+id/createButton"
-            style="@style/long_button_style"
+            android:text="Create User"
             android:layout_margin="16dp"
-            android:text="@string/create_user"
+            style="@style/long_button_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userId" />
+            app:layout_constraintTop_toBottomOf="@+id/userId"
+            />
 
         <Button
             android:id="@+id/logButton"
             style="@style/long_button_style"
+            android:text="Login"
             android:layout_margin="16dp"
-            android:text="@string/login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/createButton" />
 
         <Button
             android:id="@+id/migrateButton"
-            style="@style/long_button_style"
             android:layout_margin="16dp"
-            android:text="@string/migrate_user"
+            style="@style/long_button_style"
+            android:text="Migrate User"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/logButton" />
