--- a/surface-ar-sample/src/main/res/navigation/nav_graph.xml
+++ b/surface-ar-sample/src/main/res/navigation/nav_graph.xml
@@ -30,8 +30,8 @@
             android:id="@+id/action_to_ondemand"
             app:destination="@id/fragment_ondemand" />
         <action
-            android:id="@+id/action_fragment_main_to_userManagementFragment"
-            app:destination="@id/userManagementFragment" />
+            android:id="@+id/action_fragment_main_to_userFragment"
+            app:destination="@id/userFragment" />
 
     </fragment>
 
@@ -73,9 +73,8 @@
             app:destination="@id/activity_surface_ar" />
     </fragment>
     <fragment
-        android:id="@+id/userManagementFragment"
-        android:name="com.iar.surface_ar_sample.ui.fragments.usermanagement.UserManagementFragment"
-        android:label="user_management_fragment"
-        tools:layout="@layout/user_management_fragment" />
+        android:id="@+id/userFragment"
+        android:name="com.iar.common.user.UserFragment"
+        android:label="UserFragment" />
 
 </navigation>
