--- a/core-sample/src/main/res/layout/fragment_hunt_markers.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_markers.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.fragments.arhunts.HuntMarkersFragment">
+    tools:context=".ui.fragments.arhunts.HuntMarkerDetailsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,47 +14,47 @@
         android:layout_margin="4dp">
 
         <TextView
-            android:id="@+id/clueCardTitle"
+            android:id="@+id/markerDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_margin="16dp"
             android:gravity="center"
-            android:text="@string/clue_card"
+            android:text="@string/marker_details"
             android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/clueCardImage"
+            android:id="@+id/markerImage"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_below="@id/clueCardTitle"
+            android:layout_below="@id/markerDetails"
             android:layout_marginStart="16dp"
             android:contentDescription="@string/clue_card"
             android:src="@drawable/splash_icon">
         </ImageView>
 
         <TextView
-            android:id="@+id/clueCardId"
+            android:id="@+id/markerName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/clueCardTitle"
+            android:layout_below="@id/markerDetails"
             android:layout_centerHorizontal="true"
             android:layout_margin="8dp"
-            android:layout_toEndOf="@id/clueCardImage"
+            android:layout_toEndOf="@id/markerImage"
             android:textColor="@color/grey"
             android:textSize="13sp"
             android:textStyle="bold"
             tools:text="clue card Id" />
 
         <TextView
-            android:id="@+id/clueCardDescription"
+            android:id="@+id/markerId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/clueCardId"
+            android:layout_below="@id/markerName"
             android:layout_margin="8dp"
-            android:layout_toEndOf="@id/clueCardImage"
+            android:layout_toEndOf="@id/markerImage"
             android:ellipsize="end"
             android:maxLines="3"
             android:textColor="@color/grey"
