--- a/common/src/main/res/layout/user_fragment.xml
+++ b/common/src/main/res/layout/user_fragment.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Account Settings"
+            android:text="@string/user_management"
             android:textSize="20sp"
             android:textColor="@color/navy"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
