--- a/common/src/main/res/layout/debug_button.xml
+++ b/common/src/main/res/layout/debug_button.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:text="@string/open_developer_console"/>
 
