--- a/common/src/main/res/layout/switch_layout.xml
+++ b/common/src/main/res/layout/switch_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        app:thumbTint="@android:color/white"
+        app:thumbTint="@color/primary"
         app:trackTint="@drawable/checker_track" />
 
     <LinearLayout
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/grey" />
 
     </LinearLayout>
 
