--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="grey">#595959</color>
     <color name="navy">#001158</color>
     <color name="transparent">#00000000</color>
+    <color name="lightGrey">#B0B0B0</color>
+    <color name="primary">#212BFF</color>
 </resources>
