--- a/surface-ar-sample/src/main/res/navigation/nav_graph.xml
+++ b/surface-ar-sample/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,15 @@
             android:id="@+id/action_surface_ar"
             app:destination="@id/activity_surface_ar" />
 
+        <action
+            android:id="@+id/action_fragment_ondemand_to_writeNFCFragment"
+            app:destination="@id/writeNFCFragment" />
+
+        <argument
+            android:name="isNfc"
+            app:argType="boolean"
+            android:defaultValue="false" />
+
     </fragment>
 
     <activity
@@ -66,7 +75,17 @@
         android:id="@+id/writeNFCFragment"
         android:name="com.iar.surface_ar_sample.ui.fragments.nfc.WriteNFCFragment"
         android:label="fragment_write_nfc"
-        tools:layout="@layout/fragment_write_nfc" />
+        tools:layout="@layout/fragment_write_nfc" >
+        <action
+            android:id="@+id/action_writeNFCFragment_to_fragment_ondemand"
+            app:destination="@id/fragment_ondemand" />
+
+        <argument
+            android:name="markerId"
+            app:argType="string"
+            android:defaultValue="@null"
+            app:nullable="true"/>
+    </fragment>
 
     <fragment
         android:id="@+id/locationMarkersFragment"
