--- a/surface-ar-sample/src/main/res/layout/fragment_read_nfc.xml
+++ b/surface-ar-sample/src/main/res/layout/fragment_read_nfc.xml
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:indeterminateTint="@color/white"
+            android:indeterminateTint="@color/primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_label_download_asset"
-            android:textColor="@color/white"
+            android:textColor="@color/primary"
             app:layout_constraintBottom_toTopOf="@id/progressView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
