--- a/surface-ar-sample/src/main/res/layout/location_markers_fragment.xml
+++ b/surface-ar-sample/src/main/res/layout/location_markers_fragment.xml
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_label_download_asset"
-            android:textColor="@color/navy"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@id/progressView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
