IAR-5749 Move PrreviewVideoActivity and layout to common module

--- a/common/src/main/res/layout/activity_preview_video.xml
+++ b/common/src/main/res/layout/activity_preview_video.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.activities.PreviewVideoActivity">
+    tools:context="com.iar.common.PreviewVideoActivity">
 
     <VideoView
         android:id="@+id/preview_video"
