--- a/common/src/main/res/layout/activity_preview_video.xml
+++ b/common/src/main/res/layout/activity_preview_video.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
     tools:context="com.iar.common.PreviewVideoActivity">
 
     <VideoView
         android:id="@+id/preview_video"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/Share_button"
+        android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         android:thumbTint="@color/primary" />
 
@@ -23,8 +24,10 @@
         android:id="@+id/Share_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_button_20"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
         android:text="@string/share_and_save"
         android:textAllCaps="false" />
 
-</LinearLayout>
+</RelativeLayout>
